PROJECT(core)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)


AUX_SOURCE_DIRECTORY(./ DIR_SRCS)



LINK_DIRECTORIES(../../lib)

LINK_DIRECTORIES(../../external/boost/stage/lib)

INCLUDE_DIRECTORIES(./)
INCLUDE_DIRECTORIES(../../include)
INCLUDE_DIRECTORIES(../../external/boost)


SET(LIBRARY_OUTPUT_PATH ../../lib)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ldl")

ADD_LIBRARY(core STATIC ${DIR_SRCS})


#TARGET_LINK_LIBRARIES(core pthread)


SET_TARGET_PROPERTIES(core PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET_TARGET_PROPERTIES(core PROPERTIES OUTPUT_NAME core)

SET_TARGET_PROPERTIES(core PROPERTIES PREFIX "")

SET_TARGET_PROPERTIES(core PROPERTIES SUFFIX "")

