PROJECT(platform)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)


AUX_SOURCE_DIRECTORY(./ DIR_SRCS)



LINK_DIRECTORIES(../../lib)

INCLUDE_DIRECTORIES(./)
INCLUDE_DIRECTORIES(../../include)


SET(LIBRARY_OUTPUT_PATH ../../lib)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ldl")

ADD_LIBRARY(platform STATIC ${DIR_SRCS})


#TARGET_LINK_LIBRARIES(platform pthread)


SET_TARGET_PROPERTIES(platform PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET_TARGET_PROPERTIES(platform PROPERTIES OUTPUT_NAME platform)

SET_TARGET_PROPERTIES(platform PROPERTIES PREFIX "")

SET_TARGET_PROPERTIES(platform PROPERTIES SUFFIX "")

